deploy/istio/config/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default-strict
  namespace: mesh-lab
spec:
  mtls:
    mode: STRICT
