deploy/istio/config/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: mesh-lab-edge
  namespace: mesh-lab
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "mesh-lab.local"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mesh-lab-edge
  namespace: mesh-lab
spec:
  hosts:
    - "mesh-lab.local"
  gateways:
    - mesh-lab/mesh-lab-edge
  http:
    - route:
        - destination:
            host: mesh-lab-mesh-lab-gateway.mesh-lab.svc.cluster.local
            port:
              number: 80
